--- a/gradle.properties
+++ b/gradle.properties
@@ -9,6 +9,9 @@ mlRestTestPort=8008
 
 ## These can be overridden to change the defaults
 comQueuePrefix=/marklogic/common/queue
-comQueueCollection=http://marklogic.com/community/queued
+comQueueCollection=http://marklogic.com/community/queue
 comQueueDatabase=common 
 comQueueWriterRole=
+comQueueLogDetail=true
+
+mlModulePaths=src/main/ml-modules,src/test/ml-modules
