--- a/gradle.properties
+++ b/gradle.properties
@@ -8,8 +8,8 @@ mlRestTestPort=8008
 
 
 ## These can be overridden to change the defaults
-comQueuePrefix=/marklogic/common/queue
-comQueueCollection=http://marklogic.com/community/queue
+comQueuePrefix=/noslogan.org/hub-queue/queue
+comQueueCollection=http://noslogan.org/hub-queue/queue
 comQueueDatabase=common 
 comQueueWriterRole=
 comQueueLogDetail=true
