Updates to handlers and namespaces
Signed-off-by: Nic Gibson <nic.gibson@marklogic.com>

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,10 +8,26 @@ mlRestTestPort=8008
 
 
 ## These can be overridden to change the defaults
-comQueuePrefix=/noslogan.org/hub-queue/queue
-comQueueCollection=http://noslogan.org/hub-queue/queue
-comQueueDatabase=common 
-comQueueWriterRole=
-comQueueLogDetail=true
+
+# Prefix used for URIs in the queue
+queuePrefix=/noslogan.org/hub-queue/queue/
+
+# Basic queue collection.
+queueCollection=http://noslogan.org/hub-queue/queue
+queueDatabase=common 
+queueWriterRole=
+queueLogDetail=true
+
+# The name of the role used to manage access to the queue
+queueWriterRole=queue-writer
+
+# The time before new status times out and is set failed
+queueNewTimeout=PT60M
+
+# The time before pending status is set back to new status
+queuePendingTimeout=PT30M
+
+# The name of the trace used in the queue
+queueTrace=hub.queue
 
 mlModulePaths=src/main/ml-modules,src/test/ml-modules
