testing and configuration updates

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,14 +12,15 @@ mlRestTestPort=8008
 # Prefix used for URIs in the queue
 queuePrefix=/noslogan.org/hub-queue/queue/
 
-# Basic queue collection.
-queueCollection=http://noslogan.org/hub-queue/queue
+# Prefix used for identifiers and collections
+queueNSPrefix=http://noslogan.org/hub-queue/queue
+
 queueDatabase=common 
 queueWriterRole=
 queueLogDetail=true
 
 # The name of the role used to manage access to the queue
-queueWriterRole=queue-writer
+queueRole=hub-queue-writer
 
 # The time before new status times out and is set failed
 queueNewTimeout=PT60M
@@ -31,3 +32,6 @@ queuePendingTimeout=PT30M
 queueTrace=hub.queue
 
 mlModulePaths=src/main/ml-modules,src/test/ml-modules
+
+
+mlDeployWithCma=false
