--- a/queue-test/gradle-local.properties
+++ b/queue-test/gradle-local.properties
@@ -7,3 +7,6 @@ mlPassword=admin
 mlModulePaths=src/test/ml-modules,src/main/ml-modules
 
 hubQueueDetailedLog=true
+
+mlStagingAuth=basic
+mlFinalAuth=basic
